--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
        <h2>LET'S WORK TOGETHER <i class="fa-solid fa-heart"/></i></h2>
         <p>Share the same values - We are one! </p>
         <div class="contact-links">
-        <a href="" target="_blank" class="button">
+        <a href="https://www.facebook.com/liangyaolong" target="_blank" class="button">
           <i class="fab fa-facebook-square icon"></i> 
           Facebook       
           </a>
-          <a href="" target="_blank" class="button">
+          <a href="https://github.com/LongKevin95" target="_blank" class="button">
           <i class="fab fa-github "></i>
           Github       
           </a>
@@ -72,7 +72,7 @@
           <i class="fa-brands fa-free-code-camp"></i>
           freeCodeCamp       
           </a>
-          <a href="" target="_blank" class="button">
+          <a href="mailto:long.luong.contact@gmail.com?subject=Liên hệ cộng tác&body=Tôi biết đến và liên hệ bạn thông qua Portfolio cá nhân. Vui lòng phản hồi và trao đổi với tôi thông qua E-mail này!" target="_blank" class="button">
         <i class="fa-solid fa-envelope"></i>
           E-mail       
           </a>
