--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-<!DOCTYPE html> 
-<html lang="en"> 
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="Styles.CSS"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-     <script src="https://kit.fontawesome.com/2b2f1d1491.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Styles.CSS" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- <script
+      src="https://kit.fontawesome.com/2b2f1d1491.js"
+      crossorigin="anonymous"
+    ></script> -->
   </head>
   <body>
     <nav id="navbar" class="navbar">
@@ -15,71 +28,108 @@
       <a href="#contact">Contact</a>
     </nav>
     <section id="welcome-section" class="welcome-section">
-        <h1>Kevin L</h1>
-        <p>Web Developer </p>
+      <h1>Kevin L</h1>
+      <p>Web Developer</p>
     </section>
     <section id="projects" class="projects-section">
       <h2>These are some of my personal projects</h2>
       <div class="project-grids">
-      <div class="project-tile">
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-survey-form-project/build-a-survey-form">
-        <div class="image-container">
-          <img src="https://i.ibb.co/yPK6bzb/Survey-form.png" alt="survey-form-image"/>
-          </div>
-          <p class="project-title">Survey Form</p>
-        </a>
+        <div class="project-tile">
+          <a
+            href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-survey-form-project/build-a-survey-form"
+          >
+            <div class="image-container">
+              <img
+                src="https://i.ibb.co/yPK6bzb/Survey-form.png"
+                alt="survey-form-image"
+              />
+            </div>
+            <p class="project-title">Survey Form</p>
+          </a>
+        </div>
+
+        <div class="project-tile">
+          <a
+            href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-technical-documentation-page-project/build-a-technical-documentation-page"
+          >
+            <div class="image-container">
+              <img
+                src="https://i.ibb.co/x7Gsz1c/Technical-Documentation.png"
+                alt="technical-page-image"
+              />
+            </div>
+            <p class="project-title">Technical Documentation Page</p>
+          </a>
+        </div>
+        <div class="project-tile">
+          <a
+            href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page"
+          >
+            <div class="image-container">
+              <img
+                src="https://i.ibb.co/0q88QW9/Goku.png"
+                alt="Goku"
+                border="0"
+              />
+            </div>
+            <p class="project-title">Tribute Page</p>
+          </a>
+        </div>
+        <div class="project-tile">
+          <a
+            href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page"
+          >
+            <div class="image-container">
+              <img
+                src="https://i.ibb.co/XFkqGNR/Trombones-E-com-page.png"
+                alt="image"
+              />
+            </div>
+            <p class="project-title">Landing Page</p>
+          </a>
+        </div>
       </div>
-      
-      <div class="project-tile">
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-technical-documentation-page-project/build-a-technical-documentation-page">
-        <div class="image-container">
-          <img src="https://i.ibb.co/x7Gsz1c/Technical-Documentation.png" alt="technical-page-image"/>
-          </div>
-          <p class="project-title">Technical Documentation Page</p>
-        </a>
-    </div>
-    <div class="project-tile">
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-tribute-page-project/build-a-tribute-page">
-        <div class="image-container">
-  <img src="https://i.ibb.co/0q88QW9/Goku.png" alt="Goku" border="0"/>
-  </div>
-          <p class="project-title">Tribute Page</p>
-        </a>
-      </div>
-      <div class="project-tile">
-        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/build-a-product-landing-page-project/build-a-product-landing-page">
-        <div class="image-container">
-          <img src="https://i.ibb.co/XFkqGNR/Trombones-E-com-page.png" alt="image"/>
-          </div>
-          <p class="project-title">Landing Page</p>
-        </a>
-      </div>
-    </div>
     </section>
-     <section id="contact">
-       <h2>LET'S WORK TOGETHER <i class="fa-solid fa-heart"/></i></h2>
-        <p>Share the same values - We are one! </p>
-        <div class="contact-links">
-        <a href="https://www.facebook.com/liangyaolong" target="_blank" class="button">
-          <i class="fab fa-facebook-square icon"></i> 
-          Facebook       
-          </a>
-          <a href="https://github.com/LongKevin95" target="_blank" class="button">
-          <i class="fab fa-github "></i>
-          Github       
-          </a>
-          <a id="profile-link" href="https://www.freecodecamp.org/longkevin24" target="_blank" class="button free-code-camp">
+    <section id="contact">
+      <h2>LET'S WORK TOGETHER <i class="fa-solid fa-heart"></i></h2>
+      <p>Share the same values - We are one!</p>
+      <div class="contact-links">
+        <a
+          href="https://www.facebook.com/liangyaolong"
+          target="_blank"
+          class="button"
+        >
+          <i class="fab fa-facebook-square icon"></i>
+          Facebook
+        </a>
+        <a href="https://github.com/LongKevin95" target="_blank" class="button">
+          <i class="fab fa-github"></i>
+          Github
+        </a>
+        <a
+          id="profile-link"
+          href="https://www.freecodecamp.org/longkevin24"
+          target="_blank"
+          class="button free-code-camp"
+        >
           <i class="fa-brands fa-free-code-camp"></i>
-          freeCodeCamp       
-          </a>
-          <a href="mailto:long.luong.contact@gmail.com?subject=Liên hệ cộng tác&body=Tôi biết đến và liên hệ bạn thông qua Portfolio cá nhân. Vui lòng phản hồi và trao đổi với tôi thông qua E-mail này!" target="_blank" class="button">
-        <i class="fa-solid fa-envelope"></i>
-          E-mail       
-          </a>
-          </div>
+          freeCodeCamp
+        </a>
+        <a
+          href="mailto:long.luong.contact@gmail.com?subject=Liên hệ cộng tác&body=Tôi biết đến và liên hệ bạn thông qua Portfolio cá nhân. Vui lòng phản hồi và trao đổi với tôi thông qua E-mail này!"
+          target="_blank"
+          class="button"
+        >
+          <i class="fa-solid fa-envelope"></i>
+          E-mail
+        </a>
+      </div>
     </section>
     <footer>
-      <p>This web page is and excersie of my coding course. Just for learning anyway!</p>
+      <p>
+        This web page is and excercise of my coding course. Just for learning
+        anyway!
+      </p>
     </footer>
   </body>
 </html>
