Sửa nhẹ tý nội dung chữ

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>Web Developer</p>
     </section>
     <section id="projects" class="projects-section">
-      <h2>These are some of my personal projects</h2>
+      <h2>These are some exercises of my coding course</h2>
       <div class="project-grids">
         <div class="project-tile">
           <a
@@ -127,7 +127,7 @@
     </section>
     <footer>
       <p>
-        This web page is and excercise of my coding course. Just for learning
+        This web page is an exercise of my coding course. Just for learning
         anyway!
       </p>
     </footer>
