--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>Web Developer</p>
     </section>
     <section id="projects" class="projects-section">
-      <h2>These are some exercises of my coding course</h2>
+      <h2>These are some exercises of my coding courses</h2>
       <div class="project-grids">
         <div class="project-tile">
           <a
