--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <nav id="navbar" class="navbar">
-      <a href="#navbar">About</a>
+      <a href="#">About</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
